--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <table>
                 <tr>
                   <th>
-                    expert
+                    Proficient
                   </th>
                   <td>
                     C, Java, OCaml
@@ -56,32 +56,24 @@
                 </tr>
                 <tr>
                   <th>
-                    competent
+                    Familiar
                   </th>
                   <td>
-                    Go, open web stack, C++, Python, x86 assembly
-                  </td>
-                </tr>
-                <tr>
-                  <th>
-                    novice
-                  </th>
-                  <td>
-                    Lua, Lisp, PHP
+                    Go, HTML, CSS, JavaScript (including React.js and EC6), C++, x86 assembly
                   </td>
                 </tr>
               </table>
             </div>
             <div>
-              <h3>technologies</h3>
+              <h3>tools</h3>
               <div>Unix/Linux, SQL, NGinx, Git, GNU C toolchain, Graphviz</div>
             </div>
             <div>
               <h3>highlighted coursework</h3>
               <ul>
                 <li>
-                  <h4>Systems Programming</h4>
-                  Spring 2016
+                  <h4>Operating Systems</h4>
+                  Spring 2017
                 </li>
                 <li>
                   <h4>Android Applications Development</h4>
@@ -127,18 +119,6 @@
                 <li>
                   tool for visualizing real-time traffic on local networks,
                   winner of Best Device Security Hack at CodeRed 2016
-                </li>
-              </ul>
-            </div>
-            <div>
-              <div>
-                <a href="https://github.com/chrismamo1/ducklet/">Ducklet</a>
-                <h4 class="description">experimental application server</h4>
-              </div>
-              <ul>
-                <li>
-                  authoring a framework for building web applications with
-                  arbitrary programming languages
                 </li>
               </ul>
             </div>
