remove business A.S., update expected grad date

--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
               <ul>
                 <li>
                   <h4>B.S, Computer Science, Mathematics minor</h4>
-                  expected May 2019
-                </li>
-                <li>
-                  <h4>A.S, Business</h4>
-                  expected May 2019
+                  expected Fall 2018
                 </li>
               </ul>
             </div>
