--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
               </div>
               <ul>
                 <li>
-                  worked to enhance the safe and efficient generation of web
-                  pages with OCaml COW
+                  Worked to enhance the safe and efficient generation of web
+                  pages with COW, a static web page generation tool written in OCaml.
                 </li>
               </ul>
             </div>
@@ -101,8 +101,8 @@
               </div>
               <ul>
                 <li>
-                  authoring an OCaml library for producing safe and efficient
-                  HTTP code at compile time
+                  Authoring an OCaml library for producing safe and efficient
+                  HTTP code at compile time.
                 </li>
               </ul>
             </div>
@@ -113,8 +113,20 @@
               </div>
               <ul>
                 <li>
-                  tool for visualizing real-time traffic on local networks,
-                  winner of Best Device Security Hack at CodeRed 2016
+                  Tool for visualizing real-time traffic on local networks,
+                  winner of Best Device Security Hack at CodeRed 2016.
+                </li>
+              </ul>
+            </div>
+            <div>
+              <div>
+                <a href="https://github.com/chrismamo1/reflagvsflag/">PPX Netblob</a>
+                <h4 class="description">toy site for ranking flags</h4>
+              </div>
+              <ul>
+                <li>
+                  Authoring and maintaining a viral site for rating and comparing flags,
+                  reflagvsflag.com.
                 </li>
               </ul>
             </div>
