polish up for summer 2017

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                     Familiar
                   </th>
                   <td>
-                    Go, HTML, CSS, JavaScript (including React.js and EC6), C++, x86 assembly
+                    Go, HTML, CSS, JavaScript, C++, x86 assembly, Python
                   </td>
                 </tr>
               </table>
             </div>
             <div>
               <h3>tools</h3>
-              <div>Unix/Linux, SQL, NGinx, Git, GNU C toolchain, Graphviz</div>
+              <div>SQL (Postgres, SQLite), NGinx, Git, GDB, Graphviz, AWS, Google Cloud Compute, FISH and Bash scripting</div>
             </div>
             <div>
               <h3>highlighted coursework</h3>
@@ -86,6 +86,7 @@
               <div>
                 <a href="https://github.com/chrismamo1/ocaml-cow">OCaml COW</a>
                 <h4 class="description">web programming library</h4>
+                <h4 class="tools">OCaml, HTML, CSS, JavaScript</h4>
               </div>
               <ul>
                 <li>
@@ -97,7 +98,8 @@
             <div>
               <div>
                 <a href="https://github.com/chrismamo1/ppx_netblob/">PPX Netblob</a>
-                <h4 class="description">type-driven web programming library</h4>
+                <h4 class="description">type-driven web programming</h4>
+                <h4 class="tools">OCaml</h4>
               </div>
               <ul>
                 <li>
@@ -110,6 +112,7 @@
               <div>
                 <a href="https://twitter.com/mlhacks/status/792825685505028096">Sound of Hacking</a>
                 <h4 class="description">security visualization hack</h4>
+                <h4 class="tools">JavaScript, OCaml, libpcap</h4>
               </div>
               <ul>
                 <li>
@@ -120,8 +123,9 @@
             </div>
             <div>
               <div>
-                <a href="https://github.com/chrismamo1/reflagvsflag/">PPX Netblob</a>
+                <a href="https://github.com/chrismamo1/reflagvsflag/">RE Flag Vs. Flag</a>
                 <h4 class="description">toy site for ranking flags</h4>
+                <h4 class="tools">Go, Postgres, React.js, PureCSS, ReasonML, Docker, AWS</h4>
               </div>
               <ul>
                 <li>
