--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>John Christopher McAlpine</title>
+    <script src="https://use.fontawesome.com/b76aa16e2b.js"></script>
     <link rel="stylesheet" type="text/css" href="resume.css" />
     <link rel="stylesheet" type="text/css" href="resume-print.css" media="print" />
   </head>
@@ -23,12 +24,15 @@
     <section id="body_container">
       <div class="body-column">
         <div class="resume-section">
-          <h2>Education</h2>
+          <h2>
+            <i class="fa fa-graduation-cap sectionIcon" aria-hidden="true"></i>
+            Education
+          </h2>
           <div class="itemize">
             <div>
               <h3>New Mexico Institute of Mining and Technology</h3>
               <ul>
-                <li>
+                <li class="leftLine">
                   <h4>B.S, Computer Science, Mathematics minor</h4>
                   expected Fall 2018
                 </li>
@@ -37,12 +41,15 @@
           </div>
         </div>
         <div class="resume-section">
-          <h2>Skills</h2>
+          <h2>
+            <i class="fa fa-cogs sectionIcon" aria-hidden="true"></i>
+            Skills
+          </h2>
           <div class="itemize">
             <div>
-              <h3>programming languages</h3>
+              <h3>Programming Languages</h3>
               <table>
-                <tr>
+                <tr class="leftLine">
                   <th>
                     Proficient
                   </th>
@@ -50,7 +57,7 @@
                     C, Java, OCaml
                   </td>
                 </tr>
-                <tr>
+                <tr class="leftLine">
                   <th>
                     Familiar
                   </th>
@@ -61,26 +68,33 @@
               </table>
             </div>
             <div>
-              <h3>tools</h3>
-              <div>SQL (Postgres, SQLite), NGinx, Git, GDB, Graphviz, AWS, Google Cloud Compute, FISH and Bash scripting</div>
+              <h3>Tools</h3>
+              <div class="leftLine">SQL (Postgres, SQLite), NGinx, Git, GDB, Graphviz, AWS, Google Cloud Compute, FISH and Bash scripting</div>
             </div>
             <div>
-              <h3>highlighted coursework</h3>
+              <h3>Highlighted Coursework</h3>
               <ul>
-                <li>
+                <li class="leftLine">
                   <h4>Operating Systems</h4>
                   Spring 2017
                 </li>
-                <li>
+                <li class="leftLine">
                   <h4>Android Applications Development</h4>
                   Spring/Fall 2015
+                </li>
+                <li class="leftLine">
+                  <h4>Secure System Administration</h4>
+                  Spring 2017
                 </li>
               </ul>
             </div>
           </div>
         </div>
         <div class="resume-section">
-          <h2>Projects</h2>
+          <h2>
+            <i class="fa fa-code-fork sectionIcon" aria-hidden="true"></i>
+            Projects
+          </h2>
           <div class="itemize">
             <div>
               <div>
@@ -89,7 +103,7 @@
                 <h4 class="tools">OCaml, HTML, CSS, JavaScript</h4>
               </div>
               <ul>
-                <li>
+                <li class="leftLine">
                   Worked to enhance the safe and efficient generation of web
                   pages with COW, a static web page generation tool written in OCaml.
                 </li>
@@ -102,7 +116,7 @@
                 <h4 class="tools">OCaml</h4>
               </div>
               <ul>
-                <li>
+                <li class="leftLine">
                   Authoring an OCaml library for producing safe and efficient
                   HTTP code at compile time.
                 </li>
@@ -115,7 +129,7 @@
                 <h4 class="tools">JavaScript, OCaml, libpcap</h4>
               </div>
               <ul>
-                <li>
+                <li class="leftLine">
                   Tool for visualizing real-time traffic on local networks,
                   winner of Best Device Security Hack at CodeRed 2016.
                 </li>
@@ -128,7 +142,7 @@
                 <h4 class="tools">Go, Postgres, React.js, PureCSS, ReasonML, Docker, AWS</h4>
               </div>
               <ul>
-                <li>
+                <li class="leftLine">
                   Authoring and maintaining a viral site for rating and comparing flags,
                   reflagvsflag.com.
                 </li>
@@ -139,7 +153,10 @@
       </div>
       <div class="body-column">
         <div class="resume-section">
-          <h2>Experience</h2>
+          <h2>
+            <i class="fa fa-building sectionIcon" aria-hidden="true"></i>
+            Experience
+          </h2>
           <div class="itemize">
             <div>
               <div>
@@ -147,13 +164,13 @@
                 <h4 class="description">software engineering intern, July-October 2016</h4>
               </div>
               <ul>
-                <li>
-                  built a system for the mitigation of common Diffie-Hellman
-                  groups
+                <li class="leftLine">
+                  Built a system for the mitigation of common Diffie-Hellman
+                  groups.
                 </li>
-                <li>
-                  developed cloud-based analysis tools for enterprise crypto
-                  applications
+                <li class="leftLine">
+                  Developed cloud-based tools for formal verification of crypto
+                  in enterprise applications.
                 </li>
               </ul>
             </div>
@@ -163,11 +180,11 @@
                 <h4 class="description">grader and tutor, June 2015-June 2016</h4>
               </div>
               <ul>
-                <li>
-                  student grader+tutor for CSE/IT-113 Introduction to
+                <li class="leftLine">
+                  Student grader+tutor for CSE/IT-113 Introduction to
                   Programming in C and CSE/IT-122 Introduction to Algorithms and
-                  Data Structures
-                </li>
+                  Data Structures.
+                </li class="leftLine">
               </ul>
             </div>
             <div>
@@ -176,9 +193,9 @@
                 <h4 class="description">LLC research project, August 2014-May 2015</h4>
               </div>
               <ul>
-                <li>
-                  participant in the Android Applications Development LLC, a
-                  freshman introductory research program at New Mexico Tech
+                <li class="leftLine">
+                  Participant in the Android Applications Development LLC, a
+                  freshman introductory research program at New Mexico Tech.
                 </li>
               </ul>
             </div>
@@ -188,9 +205,9 @@
                 <h4 class="description">research assistant, October 2014-June 2015</h4>
               </div>
               <ul>
-                <li>
-                  student researcher assisting with the development of a
-                  citation scraper
+                <li class="leftLine">
+                  Student researcher assisting with the development of a
+                  citation scraper.
                 </li>
               </ul>
             </div>
@@ -200,9 +217,9 @@
                 <h4 class="description">co-founder, head of research and development, March 2014-Ongoing</h4>
               </div>
               <ul>
-                <li>
-                  helping develop a suite of free applications to help autistic
-                  and dyslexic children in the classroom
+                <li class="leftLine">
+                  Helping develop a suite of free applications to help autistic
+                  and dyslexic children in the classroom.
                 </li>
               </ul>
             </div>
@@ -212,9 +229,9 @@
                 <h4 class="description">programming mentor, September 2014-ongoing</h4>
               </div>
               <ul>
-                <li>
-                  helping a group of STEM-oriented high-school students develop
-                  programs to control robots in a competitive environment
+                <li class="leftLine">
+                  Helping a group of STEM-oriented high-school students produce
+                  programs to control robots in a competitive environment.
                 </li>
               </ul>
             </div>
