add pretty formatting

--- a/index.html
+++ b/index.html
@@ -48,21 +48,59 @@
           <div class="itemize">
             <div>
               <h3>Programming Languages</h3>
+              <div style="text-align: center">
+                <div class="topLanguage ocaml">
+                  <img src="ocaml.png" />
+                  <div class="deets">
+                    <div>
+                      <b>OCaml</b>
+                    </div>
+                    <div>
+                      ~10K Lines
+                    </div>
+                  </div>
+                </div>
+                <div class="topLanguage c">
+                  <img src="c.png" />
+                  <div class="deets">
+                    <div>
+                      <b>C</b>
+                    </div>
+                    <div>
+                      ~10K Lines
+                    </div>
+                  </div>
+                </div>
+                <div class="topLanguage java">
+                  <img src="java.png" />
+                  <div class="deets">
+                    <div>
+                      <b>Java</b>
+                    </div>
+                    <div>
+                      ~5K Lines
+                    </div>
+                  </div>
+                </div>
+                <div class="topLanguage go">
+                  <img src="go.png" />
+                  <div class="deets">
+                    <div>
+                      <b>Go</b>
+                    </div>
+                    <div>
+                      ~1.5K Lines
+                    </div>
+                  </div>
+                </div>
+              </div>
               <table>
                 <tr class="leftLine">
                   <th>
-                    Proficient
+                    Other Programming Languages
                   </th>
                   <td>
-                    C, Java, OCaml
-                  </td>
-                </tr>
-                <tr class="leftLine">
-                  <th>
-                    Familiar
-                  </th>
-                  <td>
-                    Go, HTML, CSS, JavaScript, C++, x86 assembly, Python
+                    HTML, CSS (+SASS), JavaScript, C++, x86 assembly, Python, Bash
                   </td>
                 </tr>
               </table>
