--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   </div>
                 </div>
               </div>
-              <table>
+              <table style="margin-top: 20px;">
                 <tr class="leftLine">
                   <th>
                     Other Programming Languages
