--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                       <b>JS</b>
                     </div>
                     <div class="lines">
-                      ~10K Lines
+                      &gt;10K Lines
                     </div>
                   </div>
                 </div>
@@ -71,7 +71,7 @@
                       <b>OCaml</b>
                     </div>
                     <div class="lines">
-                      ~10K Lines
+                      &gt;10K Lines
                     </div>
                   </div>
                 </div>
@@ -82,7 +82,7 @@
                       <b>C</b>
                     </div>
                     <div class="lines">
-                      ~10K Lines
+                      &gt;10K Lines
                     </div>
                   </div>
                 </div>
