make more responsive and add website to header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="https://use.fontawesome.com/b76aa16e2b.js"></script>
     <link rel="stylesheet" type="text/css" href="resume.css" />
     <link rel="stylesheet" type="text/css" href="resume-print.css" media="print" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id="header_container">
@@ -22,6 +23,10 @@
         <span>
           <i class="fa fa-github descriptionIcon" aria-hidden="true"></i>
           <a class="hideHref" href="https://github.com/chrismamo1">github.com/chrismamo1</a>
+        </span>
+        <span>
+          <i class="fa fa-globe descriptionIcon" aria-hidden="true"></i>
+          <a class="hideHref" href="https://chrismamo1.github.io">chrismamo1.github.io</a>
         </span>
       </div>
     </div>
