--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
                   <h4>Secure Systems Administration</h4>
                   Spring 2017
                 </li>
+                <li class="leftLine">
+                  <h4>Intro. High Performance Computing</h4>
+                  Fall 2017
+                </li>
               </ul>
             </div>
           </div>
