add CuCAML to projects

--- a/index.html
+++ b/index.html
@@ -376,6 +376,22 @@
                 </li>
               </ul>
             </div>
+            <div>
+              <div>
+                <a href="github.com/chrismamo1/cucaml">CuCAML</a>
+                <h4 class="description">CUDA numeric processing for OCaml</h4>
+                <h4 class="tools">
+                  <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
+                  OCaml, CUDA, PTX, compilers, Lisp
+                </h4>
+              </div>
+              <ul class="hideOnPrint">
+                <li class="leftLine">
+                  Integrate a Lisp-like DSL for generating highly performant CUDA
+                  kernels in OCaml programs.
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
