update C++ line count

--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
                     </div>
                   </div>
                 </div>
-                <div class="topLanguage java">
-                  <img src="java.png" />
-                  <div class="deets">
-                    <div class="name">
-                      <b>Java</b>
-                    </div>
-                    <div class="lines">
-                      ~5K Lines
-                    </div>
-                  </div>
-                </div>
                 <div class="topLanguage cpp">
                   <img src="cpp.png" />
                   <div class="deets">
                     <div class="name">
                       <b>C++</b>
+                    </div>
+                    <div class="lines">
+                      &gt;10K Lines
+                    </div>
+                  </div>
+                </div>
+                <div class="topLanguage java">
+                  <img src="java.png" />
+                  <div class="deets">
+                    <div class="name">
+                      <b>Java</b>
                     </div>
                     <div class="lines">
                       ~5K Lines
